[tool.poetry]
name = "genetic-castle"
version = "0.1.0"
description = ""
authors = ["J. S. de Boer <joskodeboer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
numpy = "^1.26.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
